--- a/app/src/main/assets/test2.html
+++ b/app/src/main/assets/test2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <html>
 
 <body>
@@ -14,6 +14,9 @@
 <button onclick="gouzaoduixiang()">构造对象</button>
 <a href="xcy://nihao/addf?aaa=123">点击我啊</a>
 <a href="aiyou://nihao/addf?aaa=123">aiyoudianji</a>
+<a href="xcy://nihao/standard?aaa=123">standard</a>
+<a href="xcy://nihao/standardBB?aaa=123">standardBB</a>
+<a href="xcy://nihao/standardBB/standardCC?aaa=123">standardCC</a>
 
 <script>
         function fushanchu() {
@@ -42,7 +45,8 @@
             alert(wode.name);
             // alert(wode.name + "::" + wode.age);
         }
-    </script>
+
+</script>
 
 </body>
 
